...
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Create Int array with 10_000_000 elements"/>
                                <connections>
                                    <action selector="creationIntArray:" destination="e5n-dA-njt" eventType="touchUpInside" id="Qh0-wL-Vol"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Array" id="GHG-jT-cNw"/>
                    <connections>
                        <outlet property="activityIndicator" destination="x26-4s-3vN" id="2p3-5O-xvm"/>
...
                                <rect key="frame" x="20" y="242" width="353" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="All matching letters"/>
                                <connections>
                                    <action selector="matchingLetters:" destination="krK-68-S0l" eventType="touchUpInside" id="8uy-7A-tf4"/>
...
                                <rect key="frame" x="20" y="303" width="353" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="All characters that do not match"/>
                                <connections>
                                    <action selector="findNoMatchingLetters:" destination="krK-68-S0l" eventType="touchUpInside" id="cki-gG-K22"/>
...
                                <rect key="frame" x="20" y="358" width="353" height="34.333333333333314"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="All unique characters from the first text field that do not match in text fields"/>
                                <connections>
                                    <action selector="findNoMatchingLettersInFirstTF:" destination="krK-68-S0l" eventType="touchUpInside" id="jE6-C9-dvN"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Set" id="4xN-X2-MOO"/>
                    <connections>
                        <outlet property="allCharactersNotMatchLabel" destination="fbc-Q7-HSa" id="VzB-xZ-aaC"/>
                        <outlet property="allMatchingLettersLabel" destination="Deg-qd-esK" id="PzH-m4-aUZ"/>
                        <outlet property="allUniqueCharactersNotMatchLabel" destination="zoV-lb-IkP" id="f7J-Gq-NwB"/>
                        <outlet property="textFieldOne" destination="a2U-n9-xaD" id="oM5-lx-gvx"/>
                        <outlet property="textFieldTwo" destination="C1z-87-Ysx" id="tLC-9c-Qdb"/>
                    </connections>
                </viewController>
...
