//
//  TitleCell.swift
//  CollectionsApp
//
//  Created by Nikita Volkodav on 17.01.2023.
//

enum ArrayOperationsIdentifiers {
    
    static let insert1000BeginningOneBeOne = "Insert 1000 elements at the beginning of the array one-be-one."
    static let insert1000BeginningAtOnce = "Insert 1000 elements at the beginning of the array."
    static let insert1000MiddleOneBeOne = "Insert 1000 elements at the middle of the array one-be-one."
    static let insert1000MiddleAtOnce = "Insert 1000 elements at the middle of the array."
    static let insert1000EndOneBeOne = "Insert 1000 elements at the end of the array one-be-one."
    static let insert1000EndAtOnce = "Insert 1000 elements at the end of the array all at once."
    static let remove1000BeginningOneBeOne = "Remove 1000 elements at the beginning of the array one-be-one."
    static let remove1000BeginningAtOnce = "Remove 1000 elements at the beginning of the array."
    static let remove1000MiddleOneBeOne = "Remove 1000 elements in the middle of the array one-be-one."
    static let remove1000MiddleAtOnce = "Remove 1000 elements in the middle of the array."
    static let remove1000EndOneBeOne = "Remove 1000 elements at the end of the array one-be-one."
    static let remove1000EndAtOnce = "Remove 1000 elements at the end of the array."
}

