...
    private let arrayService = ArrayService()
    private let measureTimeService = MeasureTimeService()
    private var resultPerformingOperation = ""
    
    override func viewDidLoad() {
        super.viewDidLoad()
        resultCreationArrayLabel.accessibilityLabel = "Array creation time:"
        arrayCollection.accessibilityLabel = "Array Collection"
    }
    
    @IBAction private func creationIntArray(_ sender: Any) {
        
        toggleUI(toggle: true)
        
...
