...
                resultPerformingOperationCell = measureTimeService.measureTime {
                    arrayService.insertAtTheBeginningArrayOneBeOne()
                }
                DispatchQueue.main.async { [self ] in
                    toggleActivityIndicator(toggle: false)
                    arrayLabelCell.text = "Insertion time: \(resultPerformingOperationCell) ms."
                    arrayLabelCell.accessibilityLabel = "Insertion time:"
                }
            }
            
        case ArrayOperationsIdentifiers.insert1000BeginningAtOnce:
            DispatchQueue.global().async { [self] in
                resultPerformingOperationCell = measureTimeService.measureTime {
...
                    arrayService.removeAtTheBeginningArrayOneBeOne()
                }
                
                DispatchQueue.main.async { [self] in
                    toggleActivityIndicator(toggle: false)
                    arrayLabelCell.text = "Removing time: \(resultPerformingOperationCell) ms."
                    arrayLabelCell.accessibilityLabel = "Removing time:"
                }
            }
            
        case ArrayOperationsIdentifiers.remove1000BeginningAtOnce:
            
            DispatchQueue.global().async { [self] in
...
